fix loader jump and add to all pages

--- a/fullSite/styles/styles.css
+++ b/fullSite/styles/styles.css
@@ -244,8 +244,8 @@ p{
 /* Loading Screen  --------------------------------------------------------------------------- */
 
 #loader{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: white;
     position: absolute;
     top: 0;
@@ -259,6 +259,7 @@ p{
 
 #loader > h3{
     margin-top: 20px;
+    animation: loadTextBlur 4s infinite ease-in-out;
 }
 
 #loadLogo{
@@ -278,6 +279,21 @@ p{
     100%{
         filter: blur(0px);
         transform: translateY(0px);
+    }
+}
+
+@keyframes loadTextBlur{
+    0%{
+        color: transparent;
+        text-shadow: 0px 0px 2px rgba(0,0,0,1);
+    }
+    50%{
+        color: black;
+        text-shadow: none;
+    }
+    100%{
+        color: transparent;
+        text-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
     }
 }
 
